apps/us/foobar/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foobar
spec:
  template:
    spec:
      containers:
        - name: foobar
